test/cases/compile_errors/invalid_underscore_placement_in_float_literal-11.zig
fn main() void {
    var bad: f128 = 1.0e-1__0;
    _ = bad;
}

// error
//
// :2:28: error: repeated digit separator
